navbar issue fixed

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,9 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Mona+Sans:ital,wght@0,200..900;1,200..900&display=swap");
 @import "tailwindcss";
-@import "tw-animate-css";
-
-@import "tailwindcss/preflight";
-@tailwind utilities;
 
 @theme {
   --font-sans: "Mona Sans", ui-sans-serif, system-ui, sans-serif,
@@ -66,17 +62,16 @@ form {
     @apply bg-gradient-to-b from-cool-gray to-periwinkle p-4 rounded-2xl;
   }
   .primary-button {
-    @apply primary-gradient text-white rounded-full px-4 py-2 cursor-pointer w-full;
+    @apply primary-gradient text-white rounded-full px-5 py-4 cursor-pointer w-full;
   }
   .resume-nav {
-    /* Updated styles for the navbar */
     @apply flex flex-row justify-between items-center bg-white/70 rounded-full p-4 w-full px-10 max-w-[1200px] mx-auto;
   }
   .resume-summary {
     @apply flex flex-row items-center justify-center p-4 gap-4;
-    .category {
-      @apply flex flex-row gap-2 items-center bg-gray-50 rounded-2xl p-4 w-full justify-between;
-    }
+  }
+  .resume-summary .category {
+    @apply flex flex-row gap-2 items-center bg-gray-50 rounded-2xl p-4 w-full justify-between;
   }
   .back-button {
     @apply flex flex-row items-center gap-2 border border-gray-200 rounded-lg p-2 shadow-sm;
@@ -103,7 +98,7 @@ form {
     @apply flex flex-col gap-8 w-1/2 px-8 max-lg:w-full py-6;
   }
   .navbar {
-    @apply flex flex-row justify-between items-center bg-white rounded-full p-4 w-full px-10 max-w-[1200px] mx-auto;
+    @apply flex flex-row justify-between items-center bg-white/70 rounded-full p-4 w-full px-10 max-w-[1200px] mx-auto;
   }
   .score-badge {
     @apply flex flex-row items-center justify-center py-1 px-2 gap-4 rounded-[96px];
